# code_smell_editor

./: Cargo.toml  inference.py  readme.md  semantic_detect_training_model.py  semantic_duplicate_detector.pth  token_to_index.pkl
dl_training_file/: dl_training_model.py  rust_semantic_duplicate_data.csv
src/: analyzer.rs  astBuilder.rs  codeAnalyzer.rs  codeFlowDrawer.rs  code_analyzer.rs  fileManager.rs  file_manager.rs  main.rs  normalizer.rs  reportGenerator.rs  semanticDetector.rs  semantic_detector.rs  testCode.rs  testCode2.rs  tokenizer.rs
