[package]
name = "iced_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1"} 
rfd = { version = "0.15.2"}
syn = { version = "2.0", features = ["full"] }
quote = "1.0" 