[package]
name = "iced_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1"} 
rfd = { version = "0.15.2"}
pyo3 = { version = "0.22", features = ["auto-initialize"] }
syn = { version = "2.0", features = ["full"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1.0"
prettyplease = "0.1"